--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Github testing</h1>
     <img src="flag.jpg" alt="">
     <p>Hey boss r you busy?</p>
-    <h3> Good Night <h3>
+    <h3> Good Night </h3>
 </body>
 </html>
